--- a/src/assets/css/common/public.css
+++ b/src/assets/css/common/public.css
@@ -8,6 +8,7 @@ html,body {
 	-webkit-tap-highlight-color:rgba(0,0,0,0);	/*禁止链接高亮*/ 	
 	-webkit-touch-callout:none;	/*禁止链接长按弹出选项*/
     background-color:#f5f5f9;
+    line-height: normal !important;
 }
 @media screen and (min-width: 400px) {
     html,body {
@@ -29,3 +30,11 @@ html,body {
         font-size: 40.96px!important;
     }
 }
+.null-item {
+    width: auto;
+    height: 0.5rem;
+    font-size: 0.8rem;
+    text-align: center;
+}
+.am-modal-body{color: #000 !important;}
+.hide{display: none;}
