--- a/src/assets/css/home/goods/search.css
+++ b/src/assets/css/home/goods/search.css
@@ -13,9 +13,9 @@
 .search-wrap .order-item.active .order-text{color:#FDA208}
 .search-wrap .order-item.active.down .order-icon{background-image:url("../../../../assets/images/home/goods/down2.png");}
 .search-wrap .order-item.active.up .order-icon{background-image:url("../../../../assets/images/home/goods/up.png");}
-.search-wrap .order-item .menu{width:721%;height:auto;background-color:#FFFFFF;position: absolute;z-index:1;left:-35%;top:0.65rem;overflow:hidden;}
-.search-wrap .order-item .menu li{width:95%;height:0.82rem;border-bottom:#EFEFEF solid 1px;font-size:0.28rem;line-height:0.82rem;padding-left:0.4rem;background-color:#FFFFFF;}
-.search-wrap .order-item .menu li.active{color:#FDA208}
+.search-wrap .order-item .order-menu{width:721%;height:auto;background-color:#FFFFFF;position: absolute;z-index:1;left:-35%;top:0.65rem;overflow:hidden;}
+.search-wrap .order-item .order-menu li{width:95%;height:0.82rem;border-bottom:#EFEFEF solid 1px;font-size:0.28rem;line-height:0.82rem;padding-left:0.4rem;background-color:#FFFFFF;}
+.search-wrap .order-item .order-menu li.active{color:#FDA208}
 
 .goods-main{width:100%;height:auto;background-color:#FFFFFF;margin-top:1.86rem;overflow:hidden;}
 .goods-main .goods-list{width:95%;height:2.3rem;display:flex;display:-webkit-flex;margin-top:0.4rem;justify-content: space-between;-webkit-justify-content: space-between;padding-left:0.2rem;padding-right:0.2rem;overflow:hidden;}
@@ -32,3 +32,20 @@
 .screen{width:80%;height:100%;background-color:#FFFFFF;position: fixed;z-index:91;right:0px;top:0px;transform: translateX(100%);-webkit-transform: translateX(100%)}
 .screen.move{transition: transform 0.3s;-webkit-transition: transform 0.3s;transform: translateX(0%);-webkit-transform: translateX(0%)}
 .screen.unmove{transition: transform 0.3s;-webkit-transition: transform 0.3s;transform: translateX(100%);-webkit-transform: translateX(100%)}
+.screen .attr-wrap{width:100%;}
+.screen .attr-wrap .attr-title-wrap{width:94%;height:0.8rem;display:flex;display:-webkit-flex;justify-content: space-between;-webkit-justify-content: space-between;align-items: center;-webkit-align-items:center;padding-left:0.2rem;padding-right:0.2rem;}
+.screen .attr-wrap .attr-title-wrap .attr-name{font-size:0.32rem;}
+.screen .attr-wrap .attr-title-wrap .attr-icon{width:0.4rem;height:0.4rem;background-image:url("../../../../assets/images/home/goods/down.png");background-size:100%;background-repeat: no-repeat;background-position: center;}
+.screen .attr-wrap .attr-title-wrap .attr-icon.up{background-image:url("../../../../assets/images/home/goods/up.png");background-size:100%;background-repeat: no-repeat;background-position: center;}
+.screen .attr-wrap .attr-title-wrap .price-wrap{width:auto;height:auto;display:flex;display:-webkit-flex;align-items: center;-webkit-align-items: center;margin-left:18%;}
+.screen .attr-wrap .attr-title-wrap .price-wrap .price-input{width:1rem;height:0.4rem;border:1px solid #EFEFEF}
+.screen .attr-wrap .attr-title-wrap .price-wrap .price-input input{width:100%;height:89%;font-size:0.28rem;}
+.screen .attr-wrap .attr-title-wrap .price-wrap .price-line{width:0.4rem;height:1px;background-color:#EFEFEF;margin-left:0.1rem;margin-right:0.1rem;}
+.screen .attr-wrap .item-wrap{width:100%;display:flex;display:-webkit-flex;flex-wrap: wrap;-webkit-flex-wrap:wrap;}
+.screen .attr-wrap .item-wrap .item{width:30%;height:0.64rem;background-color:#EFEFEF;text-align: center;line-height:0.64rem;overflow:hidden;font-size:0.28rem;border-radius: 0.1rem;margin-left:2%;margin-right:1%;margin-bottom: 0.2rem;}
+.screen .attr-wrap .item-wrap .item.active{color:#FFFFFF;background-color:#FDA208;}
+.screen .handel-wrap{width:100%;height:1rem;background-color:#FFFFFF;border-top:1px solid #EFEFEF;position:absolute;z-index:1;left:0px;bottom:0px;display:flex;display:-webkit-flex;}
+.screen .handel-wrap .item{width:auto;height:100%;font-size:0.28rem;text-align: center;line-height:1rem;flex:1;-webkit-flex:1}
+.screen .handel-wrap .item span{color:#FDA208}
+.screen .handel-wrap .item.reset{background-color:#EFEFEF}
+.screen .handel-wrap .item.sure{background-color:#FDA208;color: #FFFFFF}
