--- a/src/assets/css/home/goods/search.css
+++ b/src/assets/css/home/goods/search.css
@@ -1,36 +1,35 @@
-.page{width:100%;height:auto}
-.search-wrap{width:100%;height:auto;position: fixed;z-index: 2;left:0px;top:0px;}
-.search-header{width:100%;height:1rem;background-color:#FFFFFF;border-bottom:#EFEFEF solid 1px;display:flex;display:-webkit-flex;justify-content: space-between;-webkit-justify-content: space-between;align-items: center;-webkit-align-items: center;}
-.search-header .back{width:1rem;height:1rem;background-image:url("../../../../assets/images/home/goods/back.png");background-size: 100%;background-position: center;background-repeat: no-repeat;}
-.search-header .search-input-wrap{width:71%;height:0.6rem;background-color:#EAEAEA;border-radius: 0.1rem;display:flex;display:-webkit-flex;align-items: center;-webkit-align-items: center;padding-left:0.2rem;}
-.search-header .screen-btn{width:auto;height:auto;font-size:0.32rem;margin-right:0.2rem;}
-.search-header .search-input-wrap .search-icon{width:0.6rem;height:0.6rem;background-image: url('../../../../assets/images/common/search.png');background-size:100%;background-repeat:no-repeat;background-position: center;margin-right:0.2rem;}
-.search-header .search-input-wrap .search-text{font-size:0.28rem;}
-.search-wrap .order-wrap{width:auto;height:0.82rem;background-color:#FFFFFF;border-bottom:#EFEFEF solid 1px;display:flex;display:-webkit-flex;justify-content: flex-start;-webkit-justify-content: flex-start;align-items: center;-webkit-align-items: center;padding-left: 0.1rem;}
-.search-wrap .order-wrap .order-item{width:auto;height:auto;display:flex;display:-webkit-flex;align-items: center;-webkit-align-items: center;margin-left:0.2rem;margin-right:0.2rem;position: relative;z-index: 1;}
-.search-wrap .order-item .order-text{width:auto;height:auto;font-size:0.32rem;margin-right:0.1rem;}
-.search-wrap .order-item .order-icon{width:0.4rem;height:0.4rem;background-image:url("../../../../assets/images/home/goods/down.png");background-size:100%;background-position: center;background-repeat: no-repeat;}
+.page{width:100%;height:auto;background-color:#FFFFFF;overflow:hidden;}
+.search-wrap{width:100%;position: fixed;z-index: 10;left:0px;top:0px;background-color:#FFFFFF;}
+.search-header{width:100%;height:0.8rem;background-color:#FFFFFF;border-bottom:#EFEFEF solid 1px;display:flex;display:-webkit-flex;justify-content: space-between;-webkit-justify-content: space-between;align-items: center;-webkit-align-items: center;}
+.search-header .back{width:0.8rem;height:0.8rem;background-image:url("../../../../assets/images/home/goods/back.png");background-size: 100%;background-position: center;background-repeat: no-repeat;}
+.search-header .search-input-wrap{width:75%;background:#EAEAEA;height:80%;border-radius: 0.1rem;display:flex;display:-webkit-flex;align-items: center;-webkit-align-items: center;padding-left:0.2rem;}
+.search-header .screen-btn{width:auto;height:auto;font-size:0.32rem;margin-right:0.1rem;}
+.search-header .search-input-wrap .search-icon{width:0.5rem;height:0.5rem;background-image: url('../../../../assets/images/common/search.png');background-size:100%;background-repeat:no-repeat;background-position: center;margin-right:0.2rem;}
+.search-header .search-input-wrap .search-text{width:90%;height:auto;font-size:0.32rem;}
+.search-wrap .order-wrap{width:100%;height:0.8rem;background-color:#FFFFFF;border-bottom:#EFEFEF solid 1px;display:flex;display:-webkit-flex;justify-content: flex-start;-webkit-justify-content: flex-start;align-items: center;-webkit-align-items: center;}
+.search-wrap .order-wrap .order-item{width:auto;height:auto;display:flex;display:-webkit-flex;align-items: center;-webkit-align-items: center;margin-right:0.4rem;position: relative;z-index: 1;}
+.search-wrap .order-item .order-text{font-size:0.32rem;}
 .search-wrap .order-item.active .order-text{color:#FDA208}
-.search-wrap .order-item.active.down .order-icon{background-image:url("../../../../assets/images/home/goods/down2.png");}
-.search-wrap .order-item.active.up .order-icon{background-image:url("../../../../assets/images/home/goods/up.png");}
-.search-wrap .order-item .order-menu{width:721%;height:auto;background-color:#FFFFFF;position: absolute;z-index:1;left:-35%;top:0.65rem;overflow:hidden;}
-.search-wrap .order-item .order-menu li{width:95%;height:0.82rem;border-bottom:#EFEFEF solid 1px;font-size:0.28rem;line-height:0.82rem;padding-left:0.4rem;background-color:#FFFFFF;}
+.search-wrap .order-item .order-icon{width:0.35rem;height:0.35rem;background-image:url("../../../../assets/images/home/goods/down.png");background-size:100%;background-position: center;background-repeat: no-repeat;margin-left:0.1rem;}
+.search-wrap .order-item.active.up .order-icon{background-image:url("../../../../assets/images/home/goods/up.png");background-size:100%;background-position: center;background-repeat: no-repeat;}
+.search-wrap .order-item .order-menu{width:688%;height:auto;background-color:#FFFFFF;position: absolute;z-index:1;left:-35%;top:0.63rem;}
+.search-wrap .order-item .order-menu li{width:95%;height:0.8rem;border-bottom:#EFEFEF solid 1px;font-size:0.28rem;line-height:0.8rem;padding-left:0.4rem;}
 .search-wrap .order-item .order-menu li.active{color:#FDA208}
 
-.goods-main{width:100%;height:auto;background-color:#FFFFFF;margin-top:1.86rem;overflow:hidden;}
-.goods-main .goods-list{width:95%;height:2.3rem;display:flex;display:-webkit-flex;margin-top:0.4rem;justify-content: space-between;-webkit-justify-content: space-between;padding-left:0.2rem;padding-right:0.2rem;overflow:hidden;}
-.goods-main .goods-list .image{width:2rem;height:2rem;text-align:center;}
-.goods-main .goods-list .image img{width:auto;height:auto;max-width:100%;max-height:100%;}
-.goods-main .goods-list .goods-content{width:66%;height:90%;border-bottom: solid 1px #cccccc}
-.goods-main .goods-list .goods-title{width:98%;height:0.8rem;overflow:hidden;font-size:0.28rem;}
-.goods-main .goods-list .price{font-size:0.28rem;color:#F93036;margin-top:0.1rem;}
+.goods-main{width:100%;height:auto;margin-top:2rem;}
+.goods-main .goods-list{width:100%;height:2rem;display:flex;display:-webkit-flex;justify-content: space-between;-webkit-justify-content: space-between;overflow:hidden;margin-bottom: 0.4rem;}
+.goods-main .goods-list .image{width:2rem;height:2rem;margin-left:0.1rem;}
+.goods-main .goods-list .image img{width:auto;height:auto;max-height: 100%;max-height:100%;}
+.goods-main .goods-list .goods-content{width:67%;height:98%;border-bottom:solid 1px #cccccc;}
+.goods-main .goods-list .goods-title{width:95%;height:0.8rem;font-size:0.28rem;overflow:hidden;}
+.goods-main .goods-list .price{font-size:0.32rem;color:#F93036;margin-top:0.1rem;}
 .goods-main .goods-list .sales-num{font-size:0.24rem;color:#969696;margin-top:0.1rem;}
-.goods-main .sales-num span{color:#FF9B00}
+.goods-main .goods-list .sales-num span{color:#FDA208}
 
-.mask{width:100%;height:100%;position: fixed;z-index:90;left:0px;top:0px;background-color:rgba(0,0,0,0.3)}
+.mask{width:100%;height:100%;position: fixed;z-index:99;left:0px;top:0px;background-color:rgba(0,0,0,0.3)}
 
-.screen{width:80%;height:100%;background-color:#FFFFFF;position: fixed;z-index:91;right:0px;top:0px;transform: translateX(100%);-webkit-transform: translateX(100%)}
-.screen.move{transition: transform 0.3s;-webkit-transition: transform 0.3s;transform: translateX(0%);-webkit-transform: translateX(0%)}
+.screen{width:80%;height:100%;background-color:#FFFFFF;position: fixed;z-index:100;right:0px;top:0px;transform: translateX(100%);-webkit-transform: translateX(100%)}
+.screen.move{transition: transform 0.3s;-webkit-transition: transform 0.3s;transform: translateX(0%);-webkit-transform: translateX(0%);}
 .screen.unmove{transition: transform 0.3s;-webkit-transition: transform 0.3s;transform: translateX(100%);-webkit-transform: translateX(100%)}
 .screen .attr-wrap{width:100%;}
 .screen .attr-wrap .attr-title-wrap{width:94%;height:0.8rem;display:flex;display:-webkit-flex;justify-content: space-between;-webkit-justify-content: space-between;align-items: center;-webkit-align-items:center;padding-left:0.2rem;padding-right:0.2rem;}
